# priceprophet

./: .coverage  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md  changelog.md  index.md  quickstart.md
priceprophet/: __init__.py  elasticity.py  forecaster.py  seasonality.py
tests/: test_basic.py
