[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "priceprophet"
version = "1.1.0"
description = "Multi-model price forecasting, anomaly detection, price elasticity, and seasonality analysis"
readme = "README.md"
authors = [
    { name = "Teyfik OZ", email = "teyfikoz@yahoo.com" }
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
keywords = ["forecasting", "time-series", "pricing", "anomaly-detection", "market-analysis"]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/teyfikoz/priceprophet"
Repository = "https://github.com/teyfikoz/priceprophet"
Issues = "https://github.com/teyfikoz/priceprophet/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["priceprophet*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
